--- a/app/index.html
+++ b/app/index.html
@@ -34,13 +34,17 @@
     <%include src="templates/menu.html"%>
 
     <main>
-      <%include src="templates/motto-section.html"%>
+      <%include src="templates/motto.html"%>
 
-      <%include src="templates/service-section.html"%>
+      <%include src="templates/service.html"%>
 
-      <%include src="templates/about-section.html"%>
+      <%include src="templates/about.html"%>
 
-      <%include src="templates/contact-section.html"%>
+      <%include src="templates/benefits.html"%>
+
+      <%include src="templates/contact.html"%>
+
+      <%include src="templates/map.html"%>
     </main>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -58,8 +62,12 @@
     <!-- endbower -->
     <!-- endbuild -->
 
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0jvl38Z2rOang2eZtWyKtiJLdXOFIj58" type="text/javascript"></script>
+
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="scripts/maps.js"></script>
     <!-- endbuild -->
+
   </body>
 </html>
