--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,8 @@
 
       <%include src="templates/map.html"%>
     </main>
+
+    <%include src="templates/footer.html"%>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
